@@ -2,7 +2,7 @@ Author: <andrea.de.iacovo@gmail.com>
 Description: Disables unfiltered upload capability for administrators.
 --- a/wp-admin/includes/schema.php
 +++ b/wp-admin/includes/schema.php
-@@ -713,11 +713,11 @@ function populate_roles_210() {
+@@ -719,11 +719,11 @@ function populate_roles_210() {
   * @since 2.3.0
   */
  function populate_roles_230() {
@@ -21,9 +21,9 @@ Description: Disables unfiltered upload capability for administrators.
  /**
 --- a/wp-admin/menu.php
 +++ b/wp-admin/menu.php
-@@ -203,6 +203,8 @@ $menu[80] = array( __('Settings'), 'mana
+@@ -214,6 +214,8 @@ $menu[80] = array( __('Settings'), 'mana
+ 	$submenu['options-general.php'][25] = array(__('Discussion'), 'manage_options', 'options-discussion.php');
  	$submenu['options-general.php'][30] = array(__('Media'), 'manage_options', 'options-media.php');
- 	$submenu['options-general.php'][35] = array(__('Privacy'), 'manage_options', 'options-privacy.php');
  	$submenu['options-general.php'][40] = array(__('Permalinks'), 'manage_options', 'options-permalink.php');
 +	$submenu['options-general.php'][45] = array(__('Security'), 'manage_options', 'options-security.php');
 +
