@@ -5,7 +5,7 @@ Bug-Debian: http://bugs.debian.org/686228
 
 --- a/wp-includes/plugin.php
 +++ b/wp-includes/plugin.php
-@@ -564,11 +564,41 @@ function plugin_basename($file) {
+@@ -569,11 +569,41 @@ function plugin_basename($file) {
  	$plugin_dir = preg_replace('|/+|','/', $plugin_dir); // remove any duplicate slash
  	$mu_plugin_dir = str_replace('\\','/',WPMU_PLUGIN_DIR); // sanitize for Win32 installs
  	$mu_plugin_dir = preg_replace('|/+|','/', $mu_plugin_dir); // remove any duplicate slash
