@@ -10,6 +10,7 @@ wordpress (3.5+dfsg-1) UNRELEASED; urgency=low
     underscore.js too.
   * Drop debian/patches/006rss_language.patch, the rss_language option
     is no longer used.
+  * Update/refresh all other patches on top of the new release.
 
  -- Raphaël Hertzog <hertzog@debian.org>  Fri, 21 Dec 2012 08:35:50 +0100
 
